@@ -1,5 +1,8 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
+
+ * fixed __contains__ on Tuples in mozilla and added TupleTest to LibTest
+
  * fixed the "!=" operator, it now uses pyjslib.eq
 
  * Yi Choong contributed a DateField widget, and example - thank you!
